--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -50,7 +50,7 @@
                         <span class="badge text-danger fs-20">*</span>
                     </label>
                     <input type="text" class="form-control" name="name" id="name" placeholder="Enter Full Name"
-                        required>
+                        >
                 </div>
 
                 <div class="mb-3">
@@ -58,7 +58,7 @@
                         <span class="badge text-danger fs-20">*</span>
                     </label>
                     <input type="text" class="form-control" name="FatherName" id="FatherName"
-                        placeholder="Enter Father Name" required>
+                        placeholder="Enter Father Name" >
                 </div>
                 <div class="mb-3">
                     <label for="ContactNumber" class="form-label">Contact Number
@@ -66,19 +66,19 @@
                     </label>
 
                     <input type="tel" inputmode="numeric" class="form-control" name="ContactNumber" id="ContactNumber"
-                        placeholder="Enter Contact Number" required>
+                        placeholder="Enter Contact Number" >
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email
                         <span class="badge text-danger fs-20">*</span>
                     </label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter Email" required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter Email" >
                 </div>
                 <div class="mb-3">
                     <label for="cnic" class="form-label">CNIC
                         <span class="badge text-danger fs-20">*</span>
                     </label>
-                    <input type="number" class="form-control" name="cnic" id="cnic" placeholder="Enter CNIC" required>
+                    <input type="number" class="form-control" name="cnic" id="cnic" placeholder="Enter CNIC" >
                 </div>
                 <div class="mb-3 mt-2" id="cnicImageDiv" style="display:none;">
                     <label for="cnicImage" class="form-label">Upload CNIC Picture
