Updated team players, worked over login for admin panel

--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -223,7 +223,7 @@
                         </label>
                     </div>
                     <div class="mb-3 mt-2 ms-4 border-start ps-2" id="FutsalPlayersDiv" style="display: none;">
-                        <label for="FutsalPlayers" class="form-label">Total Players</label>
+                        <label for="FutsalPlayers" class="form-label">Team Players</label>
                         <input type="number" class="form-control FutsalPlayers" id="FutsalPlayers" name="FutsalPlayers" min="4"
                             max="7" placeholder="Enter Total Team Players (4-7)" />
                         <div id="FutsalPlayersError" class="text-danger" style="display: none;"></div>
