--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5899,4 +5899,140 @@ h6 {
 .fs-14{
   font-size: 13px;
 }
+
+#whatsappChat {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 100;
+}
+
+.whatsappIcon {
+  width: 50px;
+  height: 50px;
+}
+
+.chatToolTip {
+  position: absolute;
+  top: 125%;
+  left: -62%;
+  transform: translate(-90%, -170%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px 20px;
+  max-width: 400px; /* Adjust max-width as needed */
+  border-radius: 5px;
+  font-size: 14px;
+  transition: opacity 0.3s;
+  white-space: nowrap; /* Prevent text from wrapping */
+}
+#closeBtn{
+  position: absolute;
+  top: 95%;
+  left: 7%;
+  transform: translate(-90%, -170%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px 10px;
+  max-width: 400px; /* Adjust max-width as needed */
+  border-radius: 50%;
+  font-size: 12px;
+  transition: opacity 0.3s;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.videoWindow {
+  position: fixed;
+  bottom: 90px; /* Adjust as needed */
+  right: 20px;
+  z-index: 100;
+}
+
+.videoIcon {
+  width: 50px;
+  height: 50px;
+}
+
+.videoToolTip {
+  position: absolute;
+  top: 125%; /* Adjust as needed */
+  left: -70%; /* Adjust as needed */
+  transform: translate(-90%, -170%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px 20px;
+  max-width: 400px; /* Adjust max-width as needed */
+  border-radius: 5px;
+  font-size: 14px;
+  transition: opacity 0.3s;
+  white-space: nowrap; /* Prevent text from wrapping */
+}
+
+#VideoCloseBtn {
+  position: absolute;
+  top: 95%; /* Adjust as needed */
+  left: 7%; /* Adjust as needed */
+  transform: translate(-90%, -170%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 50%;
+  font-size: 12px;
+  transition: opacity 0.3s;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+
+.youtube-video {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+}
+
+
+.payment-accounts {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border: 1px solid #ccc;
+  width: 50%;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+}
+@media (max-width: 767px) {
+  .payment-accounts {
+    width: 100%;
+  }
+}
+
+.payment-accounts p {
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.payment-accounts ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.payment-accounts li {
+  margin-bottom: 5px;
+}
+
+.payment-accounts li strong {
+  margin-right: 10px;
+}
+
+.payment-accounts .bank-logo,
+.payment-accounts .easypaisa-logo {
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+
+
+
 /*# sourceMappingURL=style.css.map */
