--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -11,7 +11,7 @@
                   data-wow-duration="1s"
                   data-wow-delay=".3s"
                 >
-                  7th March, 2024
+                  7th, 8th, 9th March, 2024
                 </h4>
                 <h3
                   class="wow fadeInUp"
@@ -55,7 +55,7 @@
             data-wow-duration="1s"
             data-wow-delay=".5s"
           >
-          Proudly Developed by: IM Olympiad IT Team
+          Proudly Developed by: IMOlympiad IT Team
         </p>
 
           </div>
