--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -728,7 +728,7 @@
             <label for="paymentScreenshot">Upload Payment Screenshot
               <span class="badge text-danger fs-20">*</span>
             </label>
-            <input type="file" class="form-control" name="paymentScreenshot" id="paymentScreenshot" accept="image/png,image/PNG, image/jpg, image/jpeg" required />
+            <input type="file" class="form-control" name="paymentScreenshot" id="paymentScreenshot" accept="image/png,image/PNG, image/jpg, image/jpeg"  />
             <span class="text-body-secondary fs-14 mt-3">Only PNG, JPEG, JPG images accepted</span>
 
         </div>
