Adding Required attr to fields

--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -33,6 +33,7 @@
               name="studentType"
               value="no"
               id="studentTypeNo"
+              required
             />
             <label class="form-check-label" for="studentTypeNo">No</label>
           </div>
@@ -69,6 +70,7 @@
             id="studentImage"
             name="studentImage"
             accept="image/png,image/PNG, image/jpg, image/jpeg"
+            required
           />
           <span class="text-body-secondary fs-14 mt-3"
             >Only PNG, JPEG, JPG images accepted</span
@@ -85,6 +87,7 @@
             name="name"
             id="name"
             placeholder="Enter Full Name"
+            required
           />
         </div>
 
@@ -99,6 +102,7 @@
             name="FatherName"
             id="FatherName"
             placeholder="Enter Father Name"
+            required
           />
         </div>
         <div class="mb-3">
@@ -114,6 +118,7 @@
             name="ContactNumber"
             id="ContactNumber"
             placeholder="Enter Contact Number"
+            required
           />
         </div>
         <div class="mb-3">
@@ -176,6 +181,7 @@
               name="RegisterAs"
               value="observer"
               id="RegisterAsObserver"
+    
             />
             <label class="form-check-label RegisterAs" for="RegisterAsObserver"
               >Observer</label
@@ -789,7 +795,7 @@
 
 <!-- Video Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="staticBackdropLabel">IMOlympiad | How to register using website</h1>
