Adding required attr to fields

--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -23,6 +23,7 @@
               name="studentType"
               value="yes"
               id="studentTypeYes"
+              required
             />
             <label class="form-check-label" for="studentTypeYes">Yes</label>
           </div>
