--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -804,8 +804,13 @@
         </div>
         <div class="modal-body">
           <div class="youtube-video-container">
-            <iframe class="youtube-video" src="https://www.youtube.com/embed/3zwGaHzxl9E?enablejsapi=1" title="IMOlympiad | How to register using website" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="youtube-video" src="https://www.youtube.com/embed/3zwGaHzxl9E?enablejsapi=1" title="IMOlympiad | How to register using website(IMSciences Students only)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
+
+          <div class="youtube-video-container">
+            <iframe class="youtube-video" src="https://www.youtube.com/embed/fssggn99EQY" title="IMOlympiad | How to register using website(Outsiders only)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          
         </div>
       </div>
     </div>
