--- a/views/admin/components/sidebar.ejs
+++ b/views/admin/components/sidebar.ejs
@@ -8,7 +8,14 @@
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
-      </li><!-- End Dashboard Nav -->
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link " href="/registered-users">
+          <i class="bi bi-person"></i>
+          <span>Registered Users</span>
+        </a>
+      </li>
 
       
 
