--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -176,46 +176,25 @@
         <div class="mb-3 mt-4">
           <label for="RegisterAs" class="form-label">Register as?</label>
           <div class="form-check">
-            <input
-              class="form-check-input RegisterAs"
-              type="radio"
-              name="RegisterAs"
-              value="observer"
-              id="RegisterAsObserver"
-    
-            />
-            <label class="form-check-label RegisterAs" for="RegisterAsObserver"
-              >Observer</label
-            >
+             <input class="form-check-input RegisterAs" type="radio" name="RegisterAs"  value="observer" id="RegisterAsObserver" />
+             <label class="form-check-label RegisterAs" for="RegisterAsObserver">Observer</label>
           </div>
-          <div class="form-check">
-            <input
-              class="form-check-input RegisterAs"
-              type="radio"
-              name="RegisterAs"
-              value="participant"
-              id="RegisterAsParticipant"
-            />
-            <label class="form-check-label" for="RegisterAsParticipant"
-              >Participant</label
-            >
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input RegisterAs"
-              type="radio"
-              name="RegisterAs"
-              value="participantAndSocialEvent"
-              id="RegisterAsParticipantAndSocialEvent"
-            />
 
-            <label
-              class="form-check-label"
-              for="RegisterAsParticipantAndSocialEvent"
-              >Participant + Social Event</label
-            >
-          </div>
+
+            <div class="form-check">
+                <input class="form-check-input RegisterAs" type="radio" name="RegisterAs" value="participant"
+                    id="RegisterAsParticipant" />
+                <label class="form-check-label" for="RegisterAsParticipant">Participant</label>
+            </div>
+
+        <div class="form-check">
+            <input class="form-check-input RegisterAs" type="radio" name="RegisterAs" value="participantAndSocialEvent"
+                id="RegisterAsParticipantAndSocialEvent" />
+        
+            <label class="form-check-label" for="RegisterAsParticipantAndSocialEvent">Participant + Social Event</label>
         </div>
+        </div>
+        
         <div
           class="mb-3 border-start ps-3 ms-3"
           id="sports"
